--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.4.38",
     "vue-i18n": "^9.14.0",
     "vue-router": "^4.0.3",
+    "vuetify": "^3.7.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -46,7 +47,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "^5.6.2"
   },
   "eslintConfig": {
     "root": true,
